--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/ProfilePage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/ProfilePage.xaml
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <FlyoutPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SoteriaApp.Views.ProfilePage"
+            xmlns:prism="http://prismlibrary.com"
+             x:Class="SoteriaApp.Views.ProfilePage" 
+           prism:ViewModelLocator.AutowireViewModel="True"
              xmlns:pages="clr-namespace:SoteriaApp.Views" Title="Profile" 
              IconImageSource="ProfileIcon.png">
   <FlyoutPage.Flyout>
