--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/AnxietyTypePage2.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/AnxietyTypePage2.xaml
@@ -3,6 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="SoteriaApp.Views.CopingWithDisorders">
-    <WebView Source="https://www.unicef.org/parenting/mental-health"></WebView>
+             x:Class="SoteriaApp.Views.AnxietyTypePage2">
+    <WebView Source="https://www.healthline.com/health/anxiety/anxiety-triggers"></WebView>
 </ContentPage>
