--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InsightsPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InsightsPage.xaml
@@ -12,17 +12,51 @@
     <StackLayout>
 
        <Frame BackgroundColor="Transparent">
-            <Label Text="Mental Health is real! Children exhibit different behaviors that are often associated with mental heath"
-                   FontFamily="Roboto-Regular.ttf"
+            <Label Text=" Insights "
+                   FontFamily="FredokaOne-Regular.ttf"
+                   VerticalOptions="CenterAndExpand"
+                   VerticalTextAlignment="Center"
+                   HorizontalOptions="CenterAndExpand"
+                   HorizontalTextAlignment="Center"
+                   TextColor="#5C6898"
+                   FontSize="35"
+                   Margin="0,55,0,0">
+                
+                
+            </Label>
+            
+       </Frame>
+
+        <StackLayout BackgroundColor="Transparent">
+
+
+            <Label Text=" ALERT ALERT ! "
+                   FontFamily="FredokaOne-Regular.ttf"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" 
                    HorizontalTextAlignment="Center"
                    VerticalTextAlignment="Center"
                    FontSize="Subtitle"
-                   Margin="0,40,0,10"/>
-            
-       </Frame>
-    <Grid  VerticalOptions="Center" Margin="0,10,0,10">
+                   Margin="0,-15,0,65"
+                   TextColor="#5C6898"/>
+
+            <Label Text=" Mental Health is real! Children exhibit different behaviors that are often associated with mental heath"
+                   FontFamily="Roboto-Regular.ttf"
+                   HorizontalOptions="Center"
+                   VerticalOptions="Center" 
+                   HorizontalTextAlignment="Center"
+                   VerticalTextAlignment="Center"
+                   FontSize="Medium"
+                   Margin="0,-50,0,35"
+                   TextColor="#5C6898">
+                
+                
+                
+            </Label>
+
+        </StackLayout>
+
+      <Grid  VerticalOptions="Center" Margin="0,10,0,10">
 
         <Grid.RowDefinitions>
             <RowDefinition Height="200," />
