--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InsightsPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/InsightsPage.xaml
@@ -56,12 +56,12 @@
 
         </StackLayout>
 
-      <Grid  VerticalOptions="Center" Margin="0,10,0,10">
+      <Grid  VerticalOptions="Center" Margin="0,-20,0,30">
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="200," />
-            <RowDefinition  Height="200"/>
-            <RowDefinition Height="100" />
+            <RowDefinition Height="140," />
+            <RowDefinition  Height="140"/>
+            <RowDefinition Height="80" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
