--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/PupilReportPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/PupilReportPage.xaml
@@ -4,5 +4,13 @@
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="SoteriaApp.Views.PupilReportPage">
+
+    <StackLayout>
+        
+        
+        
+        
+        
+    </StackLayout>
   
 </ContentPage>
