--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/ThankYouPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/ThankYouPage.xaml
@@ -4,59 +4,84 @@
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="SoteriaApp.Views.ThankYouPage">
-    <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
 
+    <StackLayout BackgroundColor="Transparent">
 
-        <Image Source="KidReadyA.png" Margin="0,-80,0,-100">
+        <StackLayout BackgroundColor="Transparent">
+            <Image Source="KidReadyA.png" Margin="0,-65,0,0"
+                   HorizontalOptions="Center" VerticalOptions="Center">
+            </Image>
 
-        </Image>
+        </StackLayout>
 
-
-        <Label Text=" Today we start caring about our kids Health." HorizontalTextAlignment="Center"  Padding="60,40,60,20"
-                                           TextColor="#5C6898" FontSize="35" 
+        <StackLayout BackgroundColor="Transparent" Margin="0,-50,0,0">
+            
+            <Label Text=" Today we start" HorizontalTextAlignment="Center"  Padding="0"
+                                           TextColor="#5C6898" FontSize="35"
                                            FontFamily="FredokaOne-Regular.ttf"/>
+            <Label Text="caring about"
+                       HorizontalTextAlignment="Center"  Padding="0,0,0,1"
+                                           TextColor="#5C6898" FontSize="35"
+                                           FontFamily="FredokaOne-Regular.ttf">
+            </Label>
+            
+            <Label Text="our kids"
+                       HorizontalTextAlignment="Center"  Padding="0,0,0,1"
+                                           TextColor="#5C6898" FontSize="35"
+                                           FontFamily="FredokaOne-Regular.ttf">
+            </Label>
+            
+            <Label Text="Health."
+                       HorizontalTextAlignment="Center"  Padding="0,0,-16,1"
+                                           TextColor="#5C6898" FontSize="35"
+                                           FontFamily="FredokaOne-Regular.ttf">
+            </Label>
+            
+        </StackLayout>
 
-        <Label Text=" Thank you for signing up to KidReady" HorizontalTextAlignment="Center" Margin="0,-50,0,50"  Padding="30,30,35,20"
-                                           TextColor="#5C6898" FontSize="20" 
-                                           FontFamily="Montserrat-SemiBold.ttf"/>
-
-        <Label Text=" Before we move on, just a couple of things" HorizontalTextAlignment="Center" Margin="0,-50,0,50"  Padding="0"
-                                           TextColor="#5C6898" FontSize="15" 
-                                           FontFamily="Montserrat-Medium.ttf"/>
-
+        <Frame BackgroundColor="Transparent" Margin="0,25,0,0">
+            <Label Text=" Thank you for signing up to KidReady" HorizontalTextAlignment="Center" Margin="0,-50,0,50"  Padding="30,30,35,20"
+                                           TextColor="#5C6898" FontSize="20"
+                                           FontFamily="Roboto-Regular.ttf"/>
+        </Frame>
+        
+        <Frame BackgroundColor="Transparent">
+            <Label Text=" Before we move on, just a couple of things" HorizontalTextAlignment="Center" 
+                   Margin="0,-107,0,0"  Padding="30,30,35,30"
+                                           TextColor="#5C6898" FontSize="15"
+                                           FontFamily="Roboto-Regular.ttf"/>
+        </Frame>
 
         <Grid  BackgroundColor="Transparent"
-                  HorizontalOptions="StartAndExpand" Padding="60,-30,60,15"
+                  HorizontalOptions="StartAndExpand" Margin="0,-55,0,0"  Padding="30,30,35,30"
                   >
-            <CheckBox IsChecked="{Binding AlwaysShowTutorial}"
-                          VerticalOptions="Start" 
+            <CheckBox IsChecked="{Binding UpdatesAndFeatures}"
+                          VerticalOptions="Start"
                           Color="#5C6898"
                             />
             <Label Text="Notify me for updates and features?"
                        TextColor="#5C6898" FontSize="13"
                        VerticalOptions="CenterAndExpand"
-                       HorizontalOptions="CenterAndExpand" 
-                   
-                           >
-
+                       HorizontalOptions="CenterAndExpand">
             </Label>
         </Grid>
 
-        <Frame BackgroundColor="Transparent"
+        <StackLayout BackgroundColor="Transparent"
                              Margin="50,10,50,10"
-                             Padding="0,1,0,0"
-                             CornerRadius="50"
-                             HasShadow="False"
+                             Padding="0,0,0,25"
                              HeightRequest="60"
                              WidthRequest="50" >
             <Button x:Name="StartNow" Text="Start Now"
+                                    CornerRadius="50"
                                     TextColor="white"
-                                    FontFamily="Montserrat-Medium.ttf"
+                                    FontFamily="Roboto-Regular.ttf"
                                     FontSize="Medium"
-                                    BackgroundColor="#5C6898"
-                                    Command="{Binding ThankYouPageBtnCommand}"/>
-        </Frame>
+                                    BackgroundColor="#5C6898" Command="{Binding ThankYouPageBtnCommand  }"/>
 
+        </StackLayout>
+        
+        
+    
     </StackLayout>
-
+ 
 </ContentPage>
