--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/GradeClassListPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/GradeClassListPage.xaml
@@ -4,5 +4,26 @@
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="SoteriaApp.Views.GradeClassListPage">
-  
+
+    <ScrollView>
+
+        <Frame BackgroundColor="Transparent">
+
+            <SearchBar Placeholder="Search ..."
+                  
+                   PlaceholderColor="DarkGray"
+                   HorizontalTextAlignment="Center"
+                  CancelButtonColor="Transparent"
+                   VerticalOptions="StartAndExpand"
+                       HorizontalOptions="Start">
+
+
+
+            </SearchBar>
+
+        </Frame>
+
+
+    </ScrollView>
+
 </ContentPage>
