--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/SettingPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/SettingPage.xaml
@@ -42,7 +42,7 @@
                              WidthRequest="50"  >
                 <Button Text=" Support " x:Name="Support"
                        TextColor="White"
-                       BackgroundColor="#AAE1EB"
+                       BackgroundColor="#7D86AD"
                        FontFamily="Roboto-Regular.ttf"
                        FontSize="Medium"
                         Clicked="Support_Clicked"/>
@@ -76,7 +76,7 @@
                 <Button Text=" About Us "
                         x:Name="AboutUs"
                        TextColor="White"
-                       BackgroundColor="#AAE1EB"
+                       BackgroundColor="#7D86AD"
                        FontFamily="Roboto-Regular.ttf"
                        FontSize="Medium"
                         Clicked="AboutUs_Clicked"/>
@@ -106,15 +106,16 @@
                              HasShadow="False"
                              HeightRequest="60"
                              WidthRequest="50" >
-                    <Button Text="Sign Out"
+                    <Button Text="Sign Out" x:Name="SignOut"
                                     TextColor="white"
                                     FontFamily="Roboto-Regular.ttf"
                                     FontSize="Medium"
-                                    BackgroundColor="#7D86AD"/>
+                                    BackgroundColor="#FDB3CA"
+                            />
                 </Frame>
                 <!-- Delete Account -->
                 <Label Text=" Delete Account"
-                               TextColor="#5C6898"
+                               TextColor="#AAE1EB"
                                 Padding="0,10,0,0">
                 </Label>
             </StackLayout>
